--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@ let audioPlayed = false;
 button56.addEventListener("click", function() {
     fire.style.display = "";
     if (!audioPlayed) {
-        var audio = new Audio('https://unia909.github.io/7-8/gangnam_style_phonk.mp3');
+        var audio = new Audio('https://unia909.github.io/7-8/Tincup_Lost.mp3');
         audio.play();
         audioPlayed = true;
     }
