--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@ body {
     background-color: #000;
     margin: 0;
 }
-            
-html, body, .centerDiv {
-    height: 99%;
+
+html, body {
+    height: 100%;
 }
 
 .centerDiv {
+    height: 99%;
     display: flex;
     justify-content: center;
 }
